fixed contrast error

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ h2{
     animation: fade 2s linear;
 }
 main{
-  background-color: black;
+  background-color: white;
 }
 p {
     position: absolute;
@@ -23,7 +23,8 @@ p {
     max-width: 60%;
     padding-top: 20px;
     font-family:'Palatino', Georgia;
-    font-size: small;
+    font-size: medium;
+    font-weight: bold;
     line-height: 1.5;
   }
 @media screen and (min-width:600px){
@@ -31,22 +32,17 @@ p {
         position: relative;
     }
     
-
     p {
-        all: unset;
-        position: absolute;
-        text-align: center;
-        top: 200px;
-        left: 50%;
-        transform: translateX(-50%);
         max-width: 60%;
-        font-family:'Palatino', Georgia;
-        line-height: 1.5;
+        font-size: large;
       }
 }
 
 
 @media screen and (min-width:1000px) {
+  main{
+    background-color: black;
+  }
 #PC_home_img {
     position: relative;
   }
